--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay">
       <div class="modal">
         <button type="button" class="btn-close" data-menu-close>
           <svg class="btn-close-icon" height="8" width="8">
